<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/background_light"
        android:elevation="10dp"
        android:id="@+id/linearLayoutInfos">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasSU_checkBox"
            android:id="@+id/hasSUCheckBox"
            android:clickable="false"
            android:enabled="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasBusy_checkBox"
            android:id="@+id/hasBusybox"
            android:clickable="false"
            android:enabled="false" />
    </LinearLayout>


    <Space
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/linearLayoutInfos"
        android:id="@+id/paddingSpace1" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/background_light"
        android:elevation="10dp"
        android:id="@+id/linearLayoutTrim"
        android:layout_below="@+id/paddingSpace1"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fsTrimSystem_button"
            android:id="@+id/fsTrimSystemButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fsTrimAll_button"
            android:id="@+id/fsTrimAllbutton" />
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/linearLayoutTrim"
        android:id="@+id/paddingSpace2" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/background_light"
        android:elevation="10dp"
        android:id="@+id/linearLayoutRild"
        android:layout_below="@+id/paddingSpace2"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rildpid"
            android:id="@+id/rildpid_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reRild_button"
            android:id="@+id/reRild" />
    </LinearLayout>

</RelativeLayout>
